move shop to root/web

--- a/404/index.html
+++ b/404/index.html
@@ -14,23 +14,23 @@
 
     <title>Berkshire &amp; Nash</title>
 
-    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+    <link rel="stylesheet" type="text/css" href="asset/GoogleLato.css" />
 
-    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
-    <script type="text/javascript" src="daf69945af.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/daf69945af.css" />
+    <script type="text/javascript" src="asset/daf69945af.js"></script>
 
-    <script type="text/javascript" src="jquery-slim.js"></script>
-    <script type="text/javascript" src="popper.min.js"></script>
+    <script type="text/javascript" src="asset/jquery-slim.js"></script>
+    <script type="text/javascript" src="asset/popper.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <script type="text/javascript" src="bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/bootstrap.min.css" />
+    <script type="text/javascript" src="asset/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
-    <script type="text/javascript" src="ScrollMagic.js"></script>
-    <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="asset/Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="asset/ScrollMagic.js"></script>
+    <script type="text/javascript" src="asset/velocity.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
+    <script type="text/javascript" src="asset/index.js"></script>
   </head>
 
   <body>
@@ -39,15 +39,9 @@
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
             <ul>
-              <li>
-                <a href="404/">Account</a>
-              </li>
-              <li>
-                <a href="404/">Wishlist</a>
-              </li>
-              <li>
-                <a href="404/">Log In</a>
-              </li>
+              <li><a href="404/">Account</a></li>
+              <li><a href="404/">Wishlist</a></li>
+              <li><a href="404/">Log In</a></li>
               <li class="mobile-bag">
                 <a href="cart/"
                   ><i
@@ -62,7 +56,7 @@
           </div>
 
           <div class="col-12 col-md-5 col-lg-6 logo">
-            <a href="." style="text-decoration:none;color:#000000;"
+            <a href="./" style="text-decoration:none;color:#000000;"
               >Berkshire &amp; Nash</a
             >
           </div>
@@ -165,7 +159,7 @@
 
           <a class="grow-2"></a>
           <a class="search"
-            ><input type="text" value="Search"/><button>
+            ><input type="text" placeholder="Search"/><button>
               <i class="fa fa-search" aria-hidden="true"></i></button
           ></a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"
@@ -185,133 +179,18 @@
       style=""
       data-hs-cos-general-type="widget"
       data-hs-cos-type="raw_html"
-      ><div class="container-fluid" style="padding:0;">
-        <div class="row banner-tops">
-          <div class="banner2">&nbsp;</div>
-          <div class="promo" style="line-height:1.1;">
-            From brunch to business&nbsp;meeting, <br />We've got you covered.
-          </div>
-        </div>
-      </div>
-
-      <div class="container products">
-        <h1>Tops</h1>
+      ><div
+        style="height:1px; width:100%;background:#e3e3e3;margin-bottom:40px;"
+      ></div>
+      <div class="container" style="text-align:center;padding:20px 0 80px 0;">
         <div class="row">
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img class="card-img-top" src="top_0000.jpg" alt="Striped tee" />
-              <div class="card-block">
-                <h4 class="product-title">Striped tee</h4>
-                <p class="price">$9.99 <span class="old-price">$12.99</span></p>
-              </div></a
-            >
-          </div>
-
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item2/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0001.jpg"
-                alt="Bow-collar short-sleeve blouse"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Bow-collar short-sleeve blouse</h4>
-                <p class="price">$19.99</p>
-              </div></a
-            >
-          </div>
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item3/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0008.jpg"
-                alt="cashmere sweater"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Cashmere sweater</h4>
-                <p class="price">$199.99</p>
-              </div></a
-            >
-          </div>
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0006.jpg"
-                alt="Sequined crop top"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Sequined crop top</h4>
-                <p class="price">$22.99</p>
-              </div></a
-            >
-          </div>
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0005.jpg"
-                alt="Floral crop top"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Floral crop top</h4>
-                <p class="price">$14.99</p>
-              </div>
-            </a>
-          </div>
-
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0003.jpg"
-                alt="Striped ruffle button blouse"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Striped ruffle button blouse</h4>
-                <p class="price">
-                  $16.99 <span class="old-price">$19.99</span>
-                </p>
-              </div></a
-            >
-          </div>
-
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0002.jpg"
-                alt="Basic button-up"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Basic button-up</h4>
-                <p class="price">$12.99</p>
-              </div></a
-            >
-          </div>
-
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img class="card-img-top" src="top_0007.jpg" alt="Chiffon tank" />
-              <div class="card-block">
-                <h4 class="product-title">Chiffon tank</h4>
-                <p class="price">$16.99</p>
-              </div></a
-            >
-          </div>
-
-          <div class="card col-6 col-md-3 col-lg-3">
-            <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0004.jpg"
-                alt="Bow-hem diamond print blouse"
-              />
-              <div class="card-block">
-                <h4 class="product-title">Bow-hem diamond print blouse</h4>
-                <p class="price">$19.99</p>
-              </div></a
-            >
+          <div class="col-12">
+            <h1 style="font-size:90px;">404</h1>
+            <h2>
+              Whoops! This page doesn't exist.
+              <a href="/shop" style="color:#e15b3d;">Keep shopping</a>
+              instead.
+            </h2>
           </div>
         </div>
       </div></span
