--- a/index.html
+++ b/index.html
@@ -1,18 +1,431 @@
 <!DOCTYPE html>
 
-<html>
+<html class="fa-events-icons-ready" lang="en">
   <head>
-    <title>Daedalus - redirecting...</title>
-    <meta http-equiv="refresh" content="1; url=shop/" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-language" content="en-us" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <base href="./" />
+
+    <title>Berkshire &amp; Nash</title>
+
+    <link rel="stylesheet" type="text/css" href="asset/GoogleLato.css" />
+
+    <link rel="stylesheet" type="text/css" href="asset/daf69945af.css" />
+    <script type="text/javascript" src="asset/daf69945af.js"></script>
+
+    <script type="text/javascript" src="asset/jquery-slim.js"></script>
+    <script type="text/javascript" src="asset/popper.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="asset/bootstrap.min.css" />
+    <script type="text/javascript" src="asset/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="asset/Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="asset/ScrollMagic.js"></script>
+    <script type="text/javascript" src="asset/velocity.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
+    <script type="text/javascript" src="asset/index.js"></script>
   </head>
 
   <body>
-    <noscript>Come on...</noscript>
+    <div class="top">
+      <div class="container nav-container">
+        <div class="row">
+          <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
+            <ul>
+              <li>
+                <a href="404/">Account</a>
+              </li>
+              <li>
+                <a href="404/">Wishlist</a>
+              </li>
+              <li>
+                <a href="404/">Log In</a>
+              </li>
+              <li class="mobile-bag">
+                <a href="./cart"
+                  ><i
+                    class="fa fa-shopping-bag"
+                    aria-hidden="true"
+                    style="font-size:12px;"
+                  ></i
+                  ><span style="font-weight:100;"> (2)</span></a
+                >
+              </li>
+            </ul>
+          </div>
 
-    <h1>
-      Daedalus
-      <h3>#dataless SDK test</h3>
-    </h1>
-    <div>Starting...</div>
+          <div class="col-12 col-md-5 col-lg-6 logo">
+            <a href="./" style="text-decoration:none;color:#000000;"
+              >Berkshire &amp; Nash</a
+            >
+          </div>
+
+          <div class="col-2 col-md-3 col-lg-3 outer-nav second-outer-nav">
+            <ul>
+              <li>
+                <a href="./cart"
+                  ><i
+                    class="fa fa-shopping-bag"
+                    aria-hidden="true"
+                    style="font-size:12px;"
+                  ></i
+                  ><span style="font-weight:100;color:#c1c1c1"> (2)</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container nav-container">
+      <div class="main-nav" id="mainnav">
+        <ul class="in">
+          <li>
+            <a href="products/"
+              >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Floral</a>
+              </li>
+              <li>
+                <a href="products/">Midi</a>
+              </li>
+              <li>
+                <a href="products/">Maxi</a>
+              </li>
+              <li>
+                <a href="products/">Bodycon</a>
+              </li>
+              <li>
+                <a href="products/">Formal</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="products/"
+              >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Blouses</a>
+              </li>
+              <li>
+                <a href="products/">Tees</a>
+              </li>
+              <li>
+                <a href="products/">Tanks</a>
+              </li>
+              <li>
+                <a href="products/">Sweaters</a>
+              </li>
+              <li>
+                <a href="products/">Hoodies</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="404/"
+              >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Jeans</a>
+              </li>
+              <li>
+                <a href="products/">Trousers</a>
+              </li>
+              <li>
+                <a href="products/">Skirts</a>
+              </li>
+              <li>
+                <a href="products/">Shorts</a>
+              </li>
+              <li>
+                <a href="products/">Leggings</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="products/"
+              >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Jackets</a>
+              </li>
+              <li>
+                <a href="products/">Parkas</a>
+              </li>
+              <li>
+                <a href="products/">Trenches</a>
+              </li>
+              <li>
+                <a href="products/">Denim</a>
+              </li>
+              <li>
+                <a href="products/">Blazers</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="products/"
+              >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Scarves</a>
+              </li>
+              <li>
+                <a href="products/">Sunglasses</a>
+              </li>
+              <li>
+                <a href="products/">Hats</a>
+              </li>
+              <li>
+                <a href="products/">Bags &amp; Wallets</a>
+              </li>
+              <li>
+                <a href="products/">Shoes</a>
+              </li>
+              <li>
+                <a href="products/">Belts</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="products/"
+              >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+            <ul class="hidden">
+              <li>
+                <a href="products/">Dresses</a>
+              </li>
+              <li>
+                <a href="products/">Tops</a>
+              </li>
+              <li>
+                <a href="products/">Bottoms</a>
+              </li>
+              <li>
+                <a href="products/">Outerwear</a>
+              </li>
+              <li>
+                <a href="products/">Accessories</a>
+              </li>
+              <li>
+                <a href="products/">Under $10</a>
+              </li>
+            </ul>
+          </li>
+
+          <a class="grow-2"></a>
+          <a class="search"
+            ><input type="text" placeholder="Search"/><button>
+              <i class="fa fa-search" aria-hidden="true"></i></button
+          ></a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+            ><div></div>
+            <div></div>
+            <div></div
+          ></a>
+        </ul>
+      </div>
+    </div>
+
+    <!-- START NEW PAGE -->
+
+    <span
+      id="hs_cos_wrapper_raw_html"
+      class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_raw_html"
+      data-hs-cos-general-type="widget"
+      data-hs-cos-type="raw_html"
+      ><div class="container-fluid" style="padding:0;">
+        <div class="row banner">
+          <div class="banner2">&nbsp;</div>
+          <div class="promo">
+            Your favorite styles, <br />up to <span class="percent">70</span>%
+            off.
+            <a
+              class="shop-now-button"
+              href="products/"
+              style="color:#FFFFFF;text-decoration:none;"
+              >Shop Now</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="container products">
+        <h1>Featured Tops</h1>
+        <div class="row">
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0000.jpg"
+                alt="Striped Tee"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Striped tee</h4>
+                <p class="price">$9.99 <span class="old-price">$12.99</span></p>
+              </div></a
+            >
+          </div>
+
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item2/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0001.jpg"
+                alt="Bow-collar short-sleeve blouse"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Bow-collar short-sleeve blouse</h4>
+                <p class="price">$19.99</p>
+              </div></a
+            >
+          </div>
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item3/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0008.jpg"
+                alt="cashmere sweater"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Cashmere sweater</h4>
+                <p class="price">$199.99</p>
+              </div></a
+            >
+          </div>
+
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0005.jpg"
+                alt="Floral crop top"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Floral crop top</h4>
+                <p class="price">$14.99</p>
+              </div></a
+            >
+          </div>
+
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0003.jpg"
+                alt="Striped ruffle button blouse"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Striped ruffle button blouse</h4>
+                <p class="price">
+                  $16.99 <span class="old-price">$19.99</span>
+                </p>
+              </div></a
+            >
+          </div>
+
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0002.jpg"
+                alt="Basic button-up"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Basic button-up</h4>
+                <p class="price">$12.99</p>
+              </div></a
+            >
+          </div>
+
+          <div class="card col-6 col-md-3 col-lg-3">
+            <a href="item/" style="color:default;text-decoration:none;">
+              <img
+                class="card-img-top"
+                src="./asset/top_0004.jpg"
+                alt="Bow-hem diamond print blouse"
+              />
+              <div class="card-block">
+                <h4 class="product-title">Bow-hem diamond print blouse</h4>
+                <p class="price">$19.99</p>
+              </div></a
+            >
+          </div>
+        </div>
+      </div></span
+    >
+
+    <!-- END NEW PAGE -->
+
+    <div class="container-fluid footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-md-3 col-lg-3">
+            <h1>Company</h1>
+            <ul>
+              <a href="./contact"><li>About Us</li></a>
+              <a href="404/"><li>Careers</li></a>
+              <a href="404/"><li>Affiliates</li></a>
+              <a href="404/"><li>Press</li></a>
+              <a href="./locations"><li>Store Finder</li></a>
+              <a href="./contact"><li>Contact Us</li></a>
+            </ul>
+          </div>
+
+          <div class="col-6 col-md-3 col-lg-3">
+            <h1>Account</h1>
+            <ul>
+              <a href="404/"><li>My Account</li></a>
+              <a href="./cart"><li>Cart</li></a>
+              <a href="404/"><li>Wishlist</li></a>
+              <a href="404/"><li>Order Status</li></a>
+              <a href="404/"><li>Order History</li></a>
+            </ul>
+          </div>
+
+          <div class="col-6 col-md-3 col-lg-3">
+            <h1>Customer Service</h1>
+            <ul>
+              <a href="404/"><li>Shipping Information</li></a>
+              <a href="404/"><li>Payment Options</li></a>
+              <a href="404/"><li>Returns/Exchanges</li></a>
+              <a href="404/"><li>Size Guide</li></a>
+              <a href="404/"><li>Privacy Policy</li></a>
+              <a href="404/"><li>Terms of Use</li></a>
+              <a href="404/"><li>FAQ</li></a>
+            </ul>
+          </div>
+
+          <div class="col-6 col-md-3 col-lg-3">
+            <h1>Need Help?</h1>
+            <h2>General Info</h2>
+            <h3>(800) 621-2850</h3>
+            <h2>Order Info</h2>
+            <h3>(800) 555-5262</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid bottom-footer">
+      <div class="container">
+        © 2017 for demonstration purposes only. Berkshire &amp; Nash is not a
+        real retailer, and orders will not be fulfilled.
+      </div>
+    </div>
   </body>
 </html>
