--- a/item/index.html
+++ b/item/index.html
@@ -14,23 +14,23 @@
 
     <title>Berkshire &amp; Nash</title>
 
-    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+    <link rel="stylesheet" type="text/css" href="asset/GoogleLato.css" />
 
-    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
-    <script type="text/javascript" src="daf69945af.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/daf69945af.css" />
+    <script type="text/javascript" src="asset/daf69945af.js"></script>
 
-    <script type="text/javascript" src="jquery-slim.js"></script>
-    <script type="text/javascript" src="popper.min.js"></script>
+    <script type="text/javascript" src="asset/jquery-slim.js"></script>
+    <script type="text/javascript" src="asset/popper.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <script type="text/javascript" src="bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/bootstrap.min.css" />
+    <script type="text/javascript" src="asset/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
-    <script type="text/javascript" src="ScrollMagic.js"></script>
-    <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="asset/Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="asset/ScrollMagic.js"></script>
+    <script type="text/javascript" src="asset/velocity.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
+    <script type="text/javascript" src="asset/index.js"></script>
   </head>
 
   <body>
@@ -174,35 +174,31 @@
     <span
       id="hs_cos_wrapper_raw_html"
       class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_raw_html"
-      style=""
       data-hs-cos-general-type="widget"
       data-hs-cos-type="raw_html"
-      ><div
+    >
+      <div
         style="height:1px; width:100%;background:#e3e3e3;margin-bottom:40px;"
       ></div>
       <div class="container">
         <div class="row product">
           <div class="col-6 col-md-6 col-lg-6">
-            <img
-              class="img-fluid"
-              src="./top_0008.jpg"
-              alt="cashmere sweater"
-            />
+            <img class="img-fluid" src="asset/top_0000.jpg" alt="Striped tee" />
           </div>
 
           <div class="card col-6 col-md-6 col-lg-6 product-desc">
-            <h1>Cashmere Sweater</h1>
-            <p class="price">$199.99</p>
+            <h1>Striped Tee</h1>
+            <p class="price"><span class="old-price">$12.99</span> $9.99</p>
 
             <h2>Description</h2>
             <p>
-              Semi-loose fit scoop neck sweater in bubblegum pink; a 100%
-              cashmere knit to keep you soft and cozy as the weather cools.
+              A striped knit tee featuring a contrasting ribbed crew neck, short
+              sleeves, and boxy fit.
             </p>
             <h2>Details + Care</h2>
             <ul>
-              <li>100% cashmere</li>
-              <li>Dry clean only</li>
+              <li>100% cotton</li>
+              <li>Machine wash cold, tumble dry low</li>
             </ul>
             <h2>Select Size:</h2>
             <div id="sizing">
@@ -214,8 +210,8 @@
             <a href="cart/" class="add-to-cart-valid">Add to Cart</a>
           </div>
         </div>
-      </div></span
-    >
+      </div>
+    </span>
 
     <div class="container-fluid footer">
       <div class="container">
