--- a/item2/index.html
+++ b/item2/index.html
@@ -14,23 +14,23 @@
 
     <title>Berkshire &amp; Nash</title>
 
-    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+    <link rel="stylesheet" type="text/css" href="asset/GoogleLato.css" />
 
-    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
-    <script type="text/javascript" src="daf69945af.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/daf69945af.css" />
+    <script type="text/javascript" src="asset/daf69945af.js"></script>
 
-    <script type="text/javascript" src="jquery-slim.js"></script>
-    <script type="text/javascript" src="popper.min.js"></script>
+    <script type="text/javascript" src="asset/jquery-slim.js"></script>
+    <script type="text/javascript" src="asset/popper.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <script type="text/javascript" src="bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/bootstrap.min.css" />
+    <script type="text/javascript" src="asset/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
-    <script type="text/javascript" src="ScrollMagic.js"></script>
-    <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="asset/Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="asset/ScrollMagic.js"></script>
+    <script type="text/javascript" src="asset/velocity.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
+    <script type="text/javascript" src="asset/index.js"></script>
   </head>
 
   <body>
@@ -183,22 +183,22 @@
       <div class="container">
         <div class="row product">
           <div class="col-6 col-md-6 col-lg-6">
-            <img class="img-fluid" src="./top_0000.jpg" alt="Striped tee" />
+            <img class="img-fluid" src="asset/top_0001.jpg" alt="Striped tee" />
           </div>
 
           <div class="card col-6 col-md-6 col-lg-6 product-desc">
-            <h1>Striped Tee</h1>
-            <p class="price"><span class="old-price">$12.99</span> $9.99</p>
+            <h1>Bow-Collar Short Sleeve Blouse</h1>
+            <p class="price">$19.99</p>
 
             <h2>Description</h2>
             <p>
-              A striped knit tee featuring a contrasting ribbed crew neck, short
-              sleeves, and boxy fit.
+              An airy chiffon blouse with black piping around the collar and
+              sleeves, with a thick black velvet bow around the neck.
             </p>
             <h2>Details + Care</h2>
             <ul>
-              <li>100% cotton</li>
-              <li>Machine wash cold, tumble dry low</li>
+              <li>100% polyester</li>
+              <li>Machine wash cold, lay flat to dry</li>
             </ul>
             <h2>Select Size:</h2>
             <div id="sizing">
@@ -207,7 +207,13 @@
               <div class="">L</div>
             </div>
 
-            <a href="cart/" class="add-to-cart-valid">Add to Cart</a>
+            <a href="#" class="add-to-cart">Add to Cart</a>
+
+            <div class="alert">
+              <span class="closebtn">×</span>
+              <strong>Oops!</strong> Something went wrong. Please try again
+              later.
+            </div>
           </div>
         </div>
       </div>
