--- a/cart/index.html
+++ b/cart/index.html
@@ -14,23 +14,23 @@
 
     <title>Berkshire &amp; Nash</title>
 
-    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+    <link rel="stylesheet" type="text/css" href="asset/GoogleLato.css" />
 
-    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
-    <script type="text/javascript" src="daf69945af.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/daf69945af.css" />
+    <script type="text/javascript" src="asset/daf69945af.js"></script>
 
-    <script type="text/javascript" src="jquery-slim.js"></script>
-    <script type="text/javascript" src="popper.min.js"></script>
+    <script type="text/javascript" src="asset/jquery-slim.js"></script>
+    <script type="text/javascript" src="asset/popper.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <script type="text/javascript" src="bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/bootstrap.min.css" />
+    <script type="text/javascript" src="asset/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
-    <script type="text/javascript" src="ScrollMagic.js"></script>
-    <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="asset/Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="asset/ScrollMagic.js"></script>
+    <script type="text/javascript" src="asset/velocity.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
+    <script type="text/javascript" src="asset/index.js"></script>
   </head>
 
   <body>
@@ -176,25 +176,181 @@
     <span
       id="hs_cos_wrapper_raw_html"
       class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_raw_html"
-      style=""
       data-hs-cos-general-type="widget"
       data-hs-cos-type="raw_html"
       ><div
         style="height:1px; width:100%;background:#e3e3e3;margin-bottom:40px;"
       ></div>
-      <div class="container" style="text-align:center;padding:20px 0 80px 0;">
-        <div class="row">
-          <div class="col-12">
-            <h1 style="font-size:90px;">404</h1>
-            <h2>
-              Whoops! This page doesn't exist.
-              <a href="/shop" style="color:#e15b3d;">Keep shopping</a>
-              instead.
-            </h2>
+      <div class="container">
+        <div class="row product">
+          <div class="col-12 col-md-8 col-lg-8">
+            <h1 class="text-left">My Bag</h1>
+            <table width="100%">
+              <tbody>
+                <tr style="border-bottom:1px solid #e3e3e3;">
+                  <td width="20%">
+                    <h3 style="text-align:left;">Product</h3>
+                  </td>
+                  <td width="20%">
+                    <h3></h3>
+                  </td>
+                  <td width="20%">
+                    <h3>Quantity</h3>
+                  </td>
+                  <td width="20%">
+                    <h3>Price</h3>
+                  </td>
+                  <td width="20%">
+                    <h3>Total</h3>
+                  </td>
+                </tr>
+                <tr>
+                  <td width="20%">
+                    <h3 style="text-align:left;">
+                      <img
+                        class="img-fluid"
+                        src="asset/top_0000.jpg"
+                        alt="Striped tee"
+                      />
+                    </h3>
+                  </td>
+                  <td width="20%" style="padding:0 10px;">
+                    <p class="text-left" style="font-size:12px;">
+                      Striped Tee<br />
+                      Color MULTI<br />
+                      SKU: 302553201996
+                    </p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;">1</p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;">$9.99</p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;font-weight:bold;">$9.99</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td width="20%">
+                    <h3 style="text-align:left;">
+                      <img
+                        class="img-fluid"
+                        src="asset/top_0008.jpg"
+                        alt="Cashmere Sweater"
+                      />
+                    </h3>
+                  </td>
+                  <td width="20%" style="padding:0 10px;">
+                    <p class="text-left" style="font-size:12px;">
+                      Cashmere Sweater<br />
+                      Color PINK<br />
+                      SKU: 305511201814
+                    </p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;">1</p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;">$199.99</p>
+                  </td>
+                  <td width="20%">
+                    <p style="font-size:12px;font-weight:bold;">$199.99</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <style>
+              table h3 {
+                font-family: "Playfair Display", Georgia, serif;
+                font-size: 20px;
+                font-weight: 600;
+                padding-bottom: 5px;
+                margin-top: 10px;
+                text-align: center;
+              }
+              table p {
+                text-align: center;
+              }
+            </style>
+          </div>
+
+          <div
+            class="card col-12 col-md-3 col-lg-3 product-desc"
+            style="margin:0 auto;"
+          >
+            <h2>Order Summary</h2>
+            <table style="letter-spacing:.3px;">
+              <tbody>
+                <tr>
+                  <td width="20%">
+                    <p style="font-weight:bold;">Subtotal:</p>
+                  </td>
+                  <td width="80%"><p class="text-right">$209.98</p></td>
+                </tr>
+                <tr>
+                  <td width="20%">
+                    <p style="font-weight:bold;">Discount:</p>
+                  </td>
+                  <td width="80%"><p class="text-right">$0.00</p></td>
+                </tr>
+                <tr>
+                  <td width="20%">
+                    <p style="font-weight:bold;">Shipping:</p>
+                  </td>
+                  <td width="80%" style="text-align:right;">
+                    <p class="text-right">TBD</p>
+                  </td>
+                </tr>
+                <tr style="border-top:1px solid grey;">
+                  <td width="20%">
+                    <p style="font-weight:bold;font-size:20px;color:#222222;">
+                      Total:
+                    </p>
+                  </td>
+                  <td width="80%" style="text-align:right;">
+                    <p
+                      class="text-right"
+                      style="font-weight:bold;color:#222222;"
+                    >
+                      $209.98
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <h2>Coupon Code</h2>
+            <form>
+              <input type="text" style="float:left;width:100%;" /><a
+                href="#"
+                class="apply-coupon"
+                style="height:41px;padding-top:12px;margin-top:-51px"
+                >Apply</a
+              >
+
+              <div class="alertcode">
+                <span class="closebtn2">×</span>
+                <strong>Sorry,</strong> that is not a valid discount code.
+              </div>
+            </form>
+
+            <a
+              href="#"
+              class="add-to-cart"
+              style="background:#db4d2d;width:100%;"
+              >Checkout</a
+            >
+
+            <div class="alert">
+              <span class="closebtn">×</span>
+              <strong>Oops!</strong> Something went wrong. Please try to
+              complete your purchase later.
+            </div>
           </div>
         </div>
-      </div></span
-    >
+      </div>
+    </span>
 
     <!-- END NEW PAGE -->
 
